--- a/recipes/chicken-fried-rice.html
+++ b/recipes/chicken-fried-rice.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Chicken Fried Rice</h1>
+    <img src="chicken-fried-rice-finished.webp" alt="Finished Chicken Fried Rice">
+    <h2>Description</h2>
+    <p>
+        This chicken fried rice recipe is very easy to make and tastes better than takeout! It's basically cooked
+        chicken, rice, soy sauce, and shredded egg stir-fried together. For best results, use leftover cooked rice.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 large egg</li>
+        <li>1 tablespoon water</li>
+        <li>1 tablespoon butter</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>1 medium onion, chopped</li>
+        <li>2 cups cooked white rice, cold</li>
+        <li>1 cup cooked, chopped chicken meat</li>
+        <li>2 tablespoons soy sauce</li>
+        <li>1 teaspoon ground black pepper or to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Beat egg and water together in small bowl. Melt butter in a large skillet or wok over medium-low heat; add egg and cook without stirring, 1 to 2 minutes. Remove egg from skillet and cut into shreds; set aside.</li>
+        <li>Heat oil in the same skillet. Add onion; cook and stir until soft, about 3 minutes. Stir in rice, chicken, soy sauce, and pepper. Cook and stir for about 5 minutes; stir in shredded egg. Serve hot.</li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
+
 </html>
