--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-fried-rice.html">Chicken Fried Rice</a>
+    <ul>
+        <li>
+            <a href="recipes/chicken-fried-rice.html">Chicken Fried Rice</a>
+        </li>
+        <li>
+            <a href="recipes/orange-chicken.html">Orange Chicken</a>
+        </li>
+        <li>
+            <a href="recipes/kung-pao-chicken.html">Kung Pao Chicken</a>
+        </li>
+    </ul>
 </body>
 </html>
